kubernetes/minikube_cnpg/web.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mt-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mt-web
  template:
    metadata:
      labels:
        app: mt-web
    spec:
      containers:
        - name: mt-web-container
          image: nickashu/web_teste:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8020
          
---

apiVersion: v1
kind: Service
metadata:
  name: mt-web-svc
spec:
  type: LoadBalancer
  selector:
    app: mt-web
  ports:
    - protocol: TCP
      port: 8020
      targetPort: 8020
