kubernetes/minikube_cnpg/worker.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mt-worker-deployment
  labels:
    app: mt-worker
spec:
  replicas: 2
  #replicas: 1  #Para a VM
  selector:
    matchLabels:
      app: mt-worker
  template:
    metadata:
      labels:
        app: mt-worker
    spec:
      containers:
        - name: mt-worker-container
          #image: gcr.io/tcc-mt/machine-teaching-worker:latest
          image: nickashu/worker_teste:v1.0
          imagePullPolicy: Always
          #resources:
          #  requests:
          #    memory: "512Mi"
          #    cpu: "500m"
          #  limits:
          #    memory: "1Gi"
          #    cpu: "1"
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: mt-worker-svc
spec:
  #O tipo padrão é ClusterIP, que é o que queremos para a comunicação interna entre os pods. Ele não expõe o serviço para fora do cluster.
  selector:
    app: mt-worker
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
